@@ -7,10 +7,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
@@ -25,9 +27,12 @@ public class TaskTimeoutSchedule {
 		long timeout = TimeUnit.MINUTES.toMillis(this.properties.getQueue().getTimeoutMinutes());
 		List<Task> tasks = this.taskQueueHelper.findRunningTask(new TaskCondition())
 				.filter(t -> currentTime - t.getStartTime() > timeout)
-				.toList();
+				.collect(Collectors.toList());
 		for (Task task : tasks) {
-			if (Set.of(TaskStatus.FAILURE, TaskStatus.SUCCESS).contains(task.getStatus())) {
+			HashSet<TaskStatus> taskStatuses = new HashSet<>();
+			taskStatuses.add(TaskStatus.FAILURE);
+			taskStatuses.add(TaskStatus.SUCCESS);
+			if (taskStatuses.contains(task.getStatus())) {
 				log.warn("task status is failure/success but is in the queue, end it. id: {}", task.getId());
 			} else {
 				log.debug("task timeout, id: {}", task.getId());
