@@ -13,13 +13,15 @@ import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.utils.data.DataObject;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
- * variation消息处理. todo 5.2之后V1-4操作返回的index始终为1, 暂时不判断index
+ * variation消息处理.
  * 开始(create): Making variations for image #1 with prompt **cat** - <@1012983546824114217> (Waiting to start)
  * 进度(update): **cat** - Variations (Strong) by <@1012983546824114217> (0%) (relaxed)
  * 5.2前-进度(update): **cat** - Variations by <@1012983546824114217> (0%) (relaxed)
@@ -42,9 +44,10 @@ public class VariationMessageHandler extends MessageHandler {
 				// 开始
 				TaskCondition condition = new TaskCondition()
 						.setFinalPromptEn(start.getPrompt())
-						.setActionSet(Set.of(TaskAction.VARIATION))
-						.setStatusSet(Set.of(TaskStatus.SUBMITTED));
+						.setActionSet(new HashSet<TaskAction>(Collections.singleton(TaskAction.VARIATION)))
+						.setStatusSet(new HashSet<TaskStatus>(Collections.singleton(TaskStatus.SUBMITTED)));
 				Task task = this.taskQueueHelper.findRunningTask(condition)
+						.filter(t -> CharSequenceUtil.endWith(t.getDescription(), "V" + start.getIndex()))
 						.min(Comparator.comparing(Task::getSubmitTime))
 						.orElse(null);
 				if (task == null) {
@@ -59,10 +62,13 @@ public class VariationMessageHandler extends MessageHandler {
 			if (end == null) {
 				return;
 			}
+			HashSet<TaskStatus> taskStatuses = new HashSet<>();
+			taskStatuses.add(TaskStatus.SUBMITTED);
+			taskStatuses.add(TaskStatus.IN_PROGRESS);
 			TaskCondition condition = new TaskCondition()
 					.setFinalPromptEn(end.getPrompt())
-					.setActionSet(Set.of(TaskAction.VARIATION))
-					.setStatusSet(Set.of(TaskStatus.SUBMITTED, TaskStatus.IN_PROGRESS));
+					.setActionSet(new HashSet<TaskAction>(Collections.singleton(TaskAction.UPSCALE)))
+					.setStatusSet(taskStatuses);
 			Task task = this.taskQueueHelper.findRunningTask(condition)
 					.max(Comparator.comparing(Task::getProgress))
 					.orElse(null);
@@ -76,10 +82,13 @@ public class VariationMessageHandler extends MessageHandler {
 			if (parseData == null || CharSequenceUtil.equalsAny(parseData.getStatus(), "relaxed", "fast")) {
 				return;
 			}
+			HashSet<TaskStatus> taskStatuses = new HashSet<>();
+			taskStatuses.add(TaskStatus.SUBMITTED);
+			taskStatuses.add(TaskStatus.IN_PROGRESS);
 			TaskCondition condition = new TaskCondition()
 					.setProgressMessageId(message.getString("id"))
-					.setActionSet(Set.of(TaskAction.VARIATION))
-					.setStatusSet(Set.of(TaskStatus.SUBMITTED, TaskStatus.IN_PROGRESS));
+					.setActionSet(new HashSet<TaskAction>(Collections.singleton(TaskAction.UPSCALE)))
+					.setStatusSet(taskStatuses);
 			Task task = this.taskQueueHelper.findRunningTask(condition)
 					.findFirst().orElse(null);
 			if (task == null) {
@@ -107,10 +116,13 @@ public class VariationMessageHandler extends MessageHandler {
 			if (parseData == null) {
 				return;
 			}
+			HashSet<TaskStatus> taskStatuses = new HashSet<>();
+			taskStatuses.add(TaskStatus.SUBMITTED);
+			taskStatuses.add(TaskStatus.IN_PROGRESS);
 			TaskCondition condition = new TaskCondition()
 					.setFinalPromptEn(parseData.getPrompt())
-					.setActionSet(Set.of(TaskAction.VARIATION))
-					.setStatusSet(Set.of(TaskStatus.SUBMITTED, TaskStatus.IN_PROGRESS));
+					.setActionSet(new HashSet<TaskAction>(Collections.singleton(TaskAction.UPSCALE)))
+					.setStatusSet(taskStatuses);
 			Task task = this.taskQueueHelper.findRunningTask(condition)
 					.min(Comparator.comparing(Task::getSubmitTime))
 					.orElse(null);
